// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrpAboutSection Component should match snapshot with type link 1`] = `
<div>
  <span
    className="a_label"
  >
    Group created by
  </span>
  <Link
    className="a_info"
    to="/profile/takkar"
  >
    takkar
  </Link>
</div>
`;

exports[`GrpAboutSection Component should match snapshot with type text 1`] = `
<div>
  <span
    className="a_label"
  >
    Bio
  </span>
  <span
    className="a_info"
  >
    A unique bio
  </span>
</div>
`;
